--- a/Data and Statistics Foundation/Creating a Data Table.ipynb
+++ b/Data and Statistics Foundation/Creating a Data Table.ipynb
@@ -9,7 +9,8 @@
    "source": [
     "import pandas as pd\n",
     "import random\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from numpy import random"
    ]
   },
   {
@@ -37,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datacells = np.array(np.random.rand(4,3))"
+    "datacells = np.array(random.rand(4,3))"
    ]
   },
   {
@@ -49,10 +50,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.26546794, 0.23091295, 0.48245653],\n",
-       "       [0.09756913, 0.55275011, 0.63590668],\n",
-       "       [0.54996058, 0.2503414 , 0.93994107],\n",
-       "       [0.03643714, 0.81551723, 0.8729825 ]])"
+       "array([[0.72525919, 0.67707539, 0.33970342],\n",
+       "       [0.21502572, 0.80546377, 0.25369318],\n",
+       "       [0.56334368, 0.74630976, 0.34956299],\n",
+       "       [0.72538534, 0.28512226, 0.23458163]])"
       ]
      },
      "execution_count": 3,
@@ -99,27 +100,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Comp A</th>\n",
-       "      <td>0.265468</td>\n",
-       "      <td>0.230913</td>\n",
-       "      <td>0.482457</td>\n",
+       "      <td>0.725259</td>\n",
+       "      <td>0.677075</td>\n",
+       "      <td>0.339703</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Comp B</th>\n",
-       "      <td>0.097569</td>\n",
-       "      <td>0.552750</td>\n",
-       "      <td>0.635907</td>\n",
+       "      <td>0.215026</td>\n",
+       "      <td>0.805464</td>\n",
+       "      <td>0.253693</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Comp C</th>\n",
-       "      <td>0.549961</td>\n",
-       "      <td>0.250341</td>\n",
-       "      <td>0.939941</td>\n",
+       "      <td>0.563344</td>\n",
+       "      <td>0.746310</td>\n",
+       "      <td>0.349563</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Comp D</th>\n",
-       "      <td>0.036437</td>\n",
-       "      <td>0.815517</td>\n",
-       "      <td>0.872983</td>\n",
+       "      <td>0.725385</td>\n",
+       "      <td>0.285122</td>\n",
+       "      <td>0.234582</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -127,10 +128,10 @@
       ],
       "text/plain": [
        "        Liquidity Ratio  Profitability Ratio  Solvency Ratio\n",
-       "Comp A         0.265468             0.230913        0.482457\n",
-       "Comp B         0.097569             0.552750        0.635907\n",
-       "Comp C         0.549961             0.250341        0.939941\n",
-       "Comp D         0.036437             0.815517        0.872983"
+       "Comp A         0.725259             0.677075        0.339703\n",
+       "Comp B         0.215026             0.805464        0.253693\n",
+       "Comp C         0.563344             0.746310        0.349563\n",
+       "Comp D         0.725385             0.285122        0.234582"
       ]
      },
      "execution_count": 4,
