--- a/Statistics for Machine Learning/M3-L3-R.ipynb
+++ b/Statistics for Machine Learning/M3-L3-R.ipynb
@@ -2,9 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'C:/Users/Dennis/OneDrive/Documents/Data Science for Investment Professionals/Statistics for Machine Learning'"
+      ],
+      "text/latex": [
+       "'C:/Users/Dennis/OneDrive/Documents/Data Science for Investment Professionals/Statistics for Machine Learning'"
+      ],
+      "text/markdown": [
+       "'C:/Users/Dennis/OneDrive/Documents/Data Science for Investment Professionals/Statistics for Machine Learning'"
+      ],
+      "text/plain": [
+       "[1] \"C:/Users/Dennis/OneDrive/Documents/Data Science for Investment Professionals/Statistics for Machine Learning\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Call:\n",
+      "lm(formula = Volatility ~ DummyReforms, data = datain)\n",
+      "\n",
+      "Coefficients:\n",
+      " (Intercept)  DummyReforms  \n",
+      "      35.652         7.556  \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "###\n",
     "###\n",
