--- a/Statistics for Machine Learning/R.ipynb
+++ b/Statistics for Machine Learning/R.ipynb
@@ -2,9 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'C:/Users/Dennis/OneDrive/Documents/Data Science for Investment Professionals/Statistics for Machine Learning'"
+      ],
+      "text/latex": [
+       "'C:/Users/Dennis/OneDrive/Documents/Data Science for Investment Professionals/Statistics for Machine Learning'"
+      ],
+      "text/markdown": [
+       "'C:/Users/Dennis/OneDrive/Documents/Data Science for Investment Professionals/Statistics for Machine Learning'"
+      ],
+      "text/plain": [
+       "[1] \"C:/Users/Dennis/OneDrive/Documents/Data Science for Investment Professionals/Statistics for Machine Learning\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "Call:\n",
+       "lm(formula = datain$Inflation ~ datain$MoneySupply)\n",
+       "\n",
+       "Coefficients:\n",
+       "       (Intercept)  datain$MoneySupply  \n",
+       "           -0.1071              0.3290  \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAA0gAAANICAMAAADKOT/pAAAANlBMVEUAAAAAAP9NTU1oaGh8\nfHyMjIyampqnp6eysrK9vb3Hx8fQ0NDZ2dnh4eHp6enw8PD/AAD////xw1/KAAAACXBIWXMA\nABJ0AAASdAHeZh94AAAYpklEQVR4nO3diXbayBZAUTEZDwGa///ZBuQB2xhjdEuqYe+1XkIn\nsQr8dCLpQqDbA4N1U98BqIGQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQ\nIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQ\nIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQ\nIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQ\nIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQ\nIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIICQIMAIIXWQwH8Jt33HXh4fzgRL0Jz/\n/ku4cSHRiJQZCYlWpO1ISLQhcUdCogmpOxISDUg6ZugJieqlz0hI1G+MjoRE7UbpSEhUbpyO\nhETVRhgz9IRExcbKSEjUbLyOhES9RuxISFRrzI6ERKVGGzP0hESVUmQ0O/jp94REjVJ19GNJ\nQqJC6Tr6qSQhUZ+UHf1QkpCoTZIxw2x2vSQhUZk00zoh0ZZEU28h0ZRUzx4JiZakexbWsIFm\nJH01g/E3jUj8oiBPyNKE5C+u8xIhGjDui1S/EhJ1mLYjIVGFkf/RxHdCogJTZyQkajB9R0Ki\nfBl0JCSKl0NHQqJwk48ZekKiaHlkJCTKlktHQqJk2XQkJMqVyeXRiZAoVUYZCYliZdWRkChU\nXh0JiTJl1pGQKFFOY4aekChPdhkJiQJl2JGQKE6OHQmJ0mTZkZAoS35jhp6QKEmmGQmJomTb\nkZAoSL4dCYlyZNyRkChFrmOGnpAoQ9YZCYlCZN6RkChC7h0JiRJk35GQyF/eY4aekMhdARkJ\niewV0ZGQyFwZHQmJvBXSkZDIWQljhp6QyFcxGQmJjBXUkZDIVkkdCYlcFdWRkMhTOWOGnpDI\nUWEZCYksFdeRkMhQeR0JifwU2JGQyE1pY4aekMhLkRkJicwU2pGQyEqpHQmJnBTbkZDIR5lj\nhp6QyEXBGQmJbBTdkZDIRNkdCYk8FN6RkMhByWOGnpCYXvEZCYkMVNCRkJhcDR0JialV0ZGQ\nmFb5Y4aekJhSJRkJiUlV05GQmFA9HQmJ6VTUkZCYSi1jhp6QmEZVGQmJiVTWkZCYRG0dCYkp\nVNfRNCF1v21CSFWra8zQExJjqzCjUUPqPkuxBAWosqMxQ/o3FxKVdjTqqd1u1S23py1c2sTN\nlVGySjsa+Rrpueue966R2lXjmKE38rBhu+xWOyG1qtqMJpjaPXbzFyHlYXYw5noVdzTB+Huz\n+P0aSEhjmM3GLanmjiZ5HulBSDmYzcYtqeqOvESoWbPZqCXVO2boCalRs9moJVWekZCaNW5I\n1XckpFaFhHTrF9ffkZBaFRHSrV/dQEdCalZUR79+fe1jhp6QmhXV0S9baCIjIbUsqqOr22ik\nIyG1bPCg4feQWulISNzpppCa6UhI3OmGkNoYM/SExJ1+72jUuzMxIXEvHZ0REnfT0QchcT8d\nvRMSCbQ0ZugJiXjNZSQkEmiwIyERrsWOhES0JjsSErHaGzP0hESkRjMSEqGa7UhIBGq3IyER\np+GOhESUVscMPSERo+mMhESQxjsSEiFa70hIRGi+IyExXNtjhp6QGEpGeyExmI6OhMQwOjoR\nEoPoqCckBjBmeCMk7iejd0Libjr6ICTupaMzQuJOOjonJO5izPCZkLiHjL4QEnfQ0VdC4u90\n9I2Q+CuXRxcIiT+S0SVC4m90dJGQ+BMdXSYk/kJHPxAStzNm+JGQuJmMfiYkbqWjK4TEjXR0\njZC4jY6uEhK3MGb4hZC4gYx+IyR+p6NfCYlf6eh3QuI3OrqBkLjOmOEmQuIqGd1GSFyjoxsJ\niSt0dCsh8TMd3UxI/MSY4Q+ExA9k9BdC4jId/YmQuEhHfyMkLtHRHwmJ74wZ/kxIfCOjvxMS\nX+noDkLiCx3dQ0h8pqO7CIlzxgx3EhJnZHQvIfFBR3cTEu90dD8h8UZHAwiJnjHDIELiREbD\nCIkjHQ0kJPY6Gk5I6CiAkDBmCCCk5skogpBap6MQQmqcjmIIqW06CiKklhkzhBFSw2QUR0jt\n0lEgITVLR5GE1CodhRJSm4wZggmpSTKKJqQW6SickBqko3hCao+OEhBSa4wZkhBSY2SUhpDa\noqNEhNQUHaUipJboKBkhtcOYISEhNUNGKQmpFTpKSkiN0FFaQmqDjhITUguMGZITUgNklJ6Q\n6qejEQipejoag5Bqp6NRCKluxgwjEVLVZDQWIdVMR6MRUsV0NB4h1UtHIxJSrYwZRiWkSslo\nXEKqk45GJqQq6WhsE4T0NO8WT2mXaJ2ORjdmSJtVN3/aP3ZHyzRLsDdmmMSIIW1OBa27h91+\nu+quHpOENICMpjBiSA/der9fd/Pj7V23SLEEOprIiCF1py/sVmf/8fm3z9y5BDqayOghPffn\ndP2BKXoJdDSRUU/tDldHvd3pNC9+idYZM0xmxJB28/dTtu76AUlI95HRdEZ9Hmn9ls/86vFI\nSPfR0YS8sqEaOpqSkGqho0kJqQ7GDBMTUhVkNDUh1UBHkxNSBXQ0PSGVT0cZEFLpjBmyIKTC\nySgPQiqbjjIhpKLpKBdCKpmOsiGkchkzZERIxZJRToRUKh1lRUiF0lFehFQmHWVGSCUyZsiO\nkAoko/wIqTw6ypCQiqOjHAWE9G/Zdct/IffmpyX4oKMsDQ/pX/8mw6ElCeknxgyZGh7SYr3b\n73frq2+KP3AJ3sgoVwNCWryc/2fovi+ky3SUrQEhdd0pJUek0egoXwNC2q1PKT3310gvE9+r\nBugoY4OukfqUTO1GYcyQtYHDhtejUjQhfSOjvA2e2m1XXbfaBN2by0ugo+wNCen1nG4Tn5KQ\nvtBR7gaE9PFM7Cmlie9VzVwe5W/I80hnc+9DSoF3SkifyKgAQ55H+vRT6LmdkM7oqARBR6Rg\nQvqgoyIMCCnFM7FflkBHhQiY2iUgpFfGDKXwD/tyJqNiCOlXs4NpVtZROYT0m9lsqpJ0VBAh\n/WI2m6okHZVESNfNZhOVZMxQFiFdNZtNVJKMCiOkq6YKSUelEdJVE4Wko+II6appQtJReYaG\n9LjoXkXdo29LTGqCjowZSjQwpMeuqzuk8cffMirSwJDm3VPYXflhianpiBsMDCn2QHRxicnp\niN8NDGnV7cLuyg9LNEVHpRoY0nae5N9RNBqSMUO5Bp/a1T5sGJGMCiakbOioZJ6QzYWOiiak\nTOiobINDel4eTutWz0F35+ISDTBmKN3QkJavV0jLqDv0fYkGyKh4A0N66ubHt+N6CX6FQ2Mh\n6ah8A0NadP07rG46n9h3Nx1VIOolQsbfd9NRDcKOSPOY+/N9icoZM9TBNdK0ZFQJU7tJ6agW\nw59HWnke6W46qoZXNkxIR/UQ0mSMGWoy5BP7Oq/+HkBGVRHSRHRUF6d209BRZYQ0CR3VJuol\nQnOvbLidMUN9gkLauka6nYwqNCCkl+6cV3/fSkc1GnJEWpx3FPquXDWHpKMqeafVkemoTqZ2\nozJmqFVUSP9WQ+/Jr0tUQEbVGhrS2isbbqejeg0M6aOjl7C7tK81JB1VbPDnIz3vl912u+xM\n7X6jo5oFTO0eD0ejTew/ka0wJGOGugWE9HJ8vwbXSNfJqHKDP2jseb/tFvt/QrpKR7UbGNLL\nMaDTG6A8hN2lfX0h6ah6Q8ffj8f/eui6ddD9ubBE+XRUP69sSM6YoQVCSk1GTRj0ng2fTHyv\ncqWjNggpLR01YkBI68fQe3JpieLpqBWD344r9N58XaJwxgztGBTSVkjXyKghA0J6cI10lY5a\nMiCk3UpIV+ioKd6zIREdtUVISRgztMYrG1KQUXOElICO2jP41d8Lw4avdNSggSE9mtp9o6MW\nDX7zk6ewu/LDEoUxZmiTqV0sGTVq8Hs27MLuyg9LFEVHrRoY0na+DH1DuwtLlERHzRp8amfY\n8EFH7RJSGGOGlnlCNoqMmiakIDpqm5Bi6Khx3vwkhI5aJ6QAxgw4tRtORghpOB0hpOF0xF5I\ng+mIIyENYsxAT0hDyIhXQhpAR7wR0v10xDsh3U1HfBDSnYwZOCek+8iIT4R0Fx3x2Zgh7R66\nbvnyupGrW8k9JB3xxYgh7eanV4mv+o2UHJKO+GrEkNbHN5PcPc2Xp42UG5IxA9+NGNK8/8Lt\nfLEtOSQZccGIIb21s1suL4WU7F8JxtIRl4wY0uL9XVkXy2KPSDriohFDeuoeXm9tu2WhIemI\ny8Ycf6/f63n55ewt05CMGfjJqE/IblZvt7YPBYYkI37klQ030xE/E9KtdMQVQrqRjrhGSDcx\nZuA6Id1CRvxCSDfQEb8R0u90xK+E9Csd8Tsh/cKYgVsI6ToZcRMhXaUjbiOka3TEjYT0M5dH\n3ExIP5IRtxPST3TEHwjpBzriL4R0mY74EyFdYszAHwnpAhnxV0L6Tkf8mZC+0RF/J6SvdMQd\nhPSZMQN3EdInMuI+QjqnI+4kpDM64l5C+qAj7iakN8YMDCCkVzJiCCH1dMQgQjrREcMI6UhH\nDCQkYwYCCMnhiABC0hEBmg9JR0RoPSQdEaLtkIwZCNJ0SDIiSssh6YgwDYekI+K0G5KOCNRq\nSMYMhGo0JBkRq82QdESwJkP6bz87SLsGbWkxpL4jJRGovZD+e+tIScRpLqTD5dFspiSCtRbS\np46URJTGQjqO64REvLZCOo29hUS8lkJ6fTWDkIjXUEjvz8LqiHDthHT2agYdEa2ZkD69KkhH\nBGslpC+vrtMRsdoIyT+aILEmQpIRqbUQko5IroGQdER69YekI0ZQe0jGDIyi8pBkxDjqDklH\njKTqkHTEWGoOSUeMpt6QjBkYUbUhyYgx1RqSjhhVpSHpiHHVGZKOGFmNIRkzMLoKQ5IR46sv\nJB0xgepC0hFTqC0kHTGJukIyZmAiVYUkI6ZSU0g6YjIVhaQjplNPSDpiQrWEZMzApCoJSUZM\nq46QdMTEqghJR0ythpB0xOTKD8mYgQwUH5KMyEHpIemILBQeko7IQ9kh6YhMlBySMQPZKDgk\nGZGPckPSERkpNiQdkZNSQ9IRWSkzJGMGMlNkSDIiNyWGpCOyU2BIOiI/5YWkIzJUWkjGDGSp\nsJBkRJ7KCklHZKqokHRErkoKSUdkq5yQjBnIWDEhyYiclRKSjshaISHpiLyVEZKOyFwJIRkz\nkL0CQpIR+cs/JB1RgOxD0hElyD0kHVGEvEMyZqAQWYckI0qRc0g6ohgZh6QjypFvSDqiILmG\nZMxAUTINSUaUJc+QdERh8gxphCUgkpAgwIghdZ+lWAImMmJIT9dDurkyyM+Yp3ab+TL1EjCN\nUa+RNt069RIwiXGHDU/dJvUSMAVTOwggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAgg\nJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAgg\nJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAgg\nJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAgg\nJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAggJAhQ\nVEizg/SLw9+VFNJspiQyVVBIs5mSyFU5Ic1mSiJbxYQ0mymJfAkJAggJAggJAhQTkmEDOSsn\nJONvMlZQSJ6QJV8lheQlQmSrqJAgV0KCAEKCAEKCAEKCAEKCAEKCAEKCAEKCAEKCAEKCAEKC\nAEKCAEKCAEKCAEKCAEKCAJmGBIW5Yy+PDyfL5cd7nB5SkwsJqdiVPKScFhJSsSt5SDktJKRi\nV/KQclpISMWu5CHltJCQil3JQ8ppISEVu5KHlNNCQip2JQ8pp4WEVOxKHlJOCwmp2JU8pJwW\nElKxK3lIOS0kpGJX8pByWshLsyGAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCA\nkCCAkCCAkCCAkCDAxCH9G2X9zUPXPWxHWGi3nnfz9S71Mk9v37Xky72v9LRIu9LT2Y6QdKd4\nXyh4p5g2pN18jPVfTh8wME++f++3836lxM1u3j4tYXlabjHCSuvE38LN2QdAJN0p3heK3imm\nDWl1zwdo/Nl8vtnvVt06+UIPpzXW3UPSVTbz1+/av+7wwA7/9S/5SpvuYXf8yzzVA3tf6Cjl\nTvGxUPROMWlIz3d9Es3fVzl+t3bdPPlKr48m7YN66pavC6y7l/3x4T0mX2mV9oF9LLRPu1N8\nLBS+U0wZ0vb8+5fOQ7dJv8jJ6zlJ2mQPe8D77n08h9x0q+Qrvf1Cov+3zhdKulN8LBS+U0wZ\n0rLbjhHSots/zk/nJqk9vp7apTpEnGy+HvmSfQ83X7a965bpF0q6U3wsFL5TTBjSY/ec+Cyo\n13Wr03Vl+pX2T8dpw/wp9TIjhfR120+nU8m0CyXfKd6/acE7xXQhnU5JxgnpeF35kPY40Xs8\njYKSLzRNSNt5qnPIj4XS7xTv37TgnWK6kBbH0eM4IR1Ph7cpx8Svno6ndof/d1IfkiYJaTdP\ndGJ3vlD6neL9mxa8U0wW0sPpPGGckM5/SmnRHc+5d8mTfX0o81FDWiZ9VP1CI+wUqf4Smiyk\nIR/F/jeJZ7dnxkr209Rum2xqtz97KNvFMunTzP1CI+wUqQb6DYT0ePprbptq5HSmP0Skf8bq\n9XvWP7CXlM80f7wOIPF3b+yQwneKiV9rN8ap3eFEeHe8cnlOvtK6O74cbZ38NRRjvbLhfaX0\nfwud7whjnNqF7xQNhPQ6S0t/QHp78Vvyld6+a4vky70/fTnSgeLb7WQLRe8ULYS0f1l28/Sv\ntDs6vRw7+Spv37Vd8uXer/qqCyl6p5g4JKiDkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCA\nkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCAkCCA\nkCCAkCCAkCCAkCCAkCCAkMY3Xz31nxC+fVrd97nNu/Wi65ZPt/zRix9/97zoFqdPnt11i7vu\nAF8JaXxd1z2cbjzc+WGSu3n/QZTz3S2Lff+1f916vz59hvP69OHeDCek8XXdoj8QzRf3hfTQ\nLQ+HtO3ylo9Pv7TCstsdjkVLB6RAQhpf1627zeHnzeHnu77/XXc6FO1u+epLf+b0a8cfHJDC\nCGl8XffSHa9vnrrn19386XDN8tT/1nbVzR/ffnH+9HHUODt6fP8I8OOPh/+tXz+o+9PN7xt4\nC8kBKY6Qxnfct1eHn1fdts9gebriWZ5+63T583j63ddfXJ2uZvbP3ePbBtbdw/ZjY28/Hr7s\nYzNnN79v4O3UzgEpjpDGd9i3F6djwrzP4Lmbb/abefd8/K3l7nCkOhwoXo63dsvDrv7SjyYe\nuvd4juUt1v/eNrZ/C+lsM2c3v2/gddiwdUCKI6TxnU68/h1254c+g9XpwPByPIB0p4PH8VdX\np+ug06Frcbr5aa9/OQ785i/7zyH1m1l9uXlhAy+n8fdh3fc5OAMJaXyHfft4mvV4OGC8X/bv\n369z3m+9Ol5LPR6PIo+ft/LvcX6s7tM10g83L29gc2jofQ7OQEIa32Hf3h4OP8vDqdZNIe0O\n54CH7LZft7M5HmNuCenyBg4HpPc5OEMJaXzHfXvenfbuayF9fMFxKLBYfPr6n7/i0s0vGzjZ\nHE78zpdnEN/E8R333IdufRwBfLpGWp1nsTqbqG265ebsxGzV9S8O+kjxX5/Mv9NmHr7c/L6B\n161shBTHN3F8xz33+XDS9ry/MLX7+AOHXzxc3Rzn5PtFNz87MTtk87Q7/LQ8BrU4/LBbnk/t\nXr7c/L6Bo+MBae/ULoyQxnfct7eHkLZvu/n580hvf+D1F+en3f+l+zSzW79ePh2/4ul4Y9WH\ndPqS1f7LzQsb2PcHpL1hQxghje+0b8+P52Vvp1VP8/dXNnz8+LTo3p543XWfT8w2D/NDK8+n\n24/z1zH66anX982sPm3x6wb6A9LbHJzhhFSCl+77zO6bs2udb5c9N22AAYRUgmV3w789uhbS\nTRtgACHl7/Vq6Pc/dunmHzbAAELK37y/nvnNzyHduAEGEBIEEBIEEBIEEBIEEBIEEBIEEBIE\nEBIEEBIEEBIEEBIEEBIEEBIEEBIEEBIEEBIEEBIEEBIEEBIEEBIEEBIEEBIEEBIEEBIEEBIE\nEBIEEBIE+B9gRK8z/PbTPgAAAABJRU5ErkJggg==",
+      "text/plain": [
+       "plot without title"
+      ]
+     },
+     "metadata": {
+      "image/png": {
+       "height": 420,
+       "width": 420
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "###\n",
     "###\n",
