--- a/Statistics for Machine Learning/M3-Assignment.ipynb
+++ b/Statistics for Machine Learning/M3-Assignment.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -70,7 +70,127 @@
     },
     "solution2": "hidden"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Annual_Income</th>\n",
+       "      <th>Education_Years</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>60000.000000</td>\n",
+       "      <td>17</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>70000.000000</td>\n",
+       "      <td>20</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>80000.000000</td>\n",
+       "      <td>18</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>50000.000000</td>\n",
+       "      <td>17</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>75000.000000</td>\n",
+       "      <td>17</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>64312.265115</td>\n",
+       "      <td>9</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>64137.281279</td>\n",
+       "      <td>8</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>64726.534621</td>\n",
+       "      <td>8</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>64255.958301</td>\n",
+       "      <td>8</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>64428.453222</td>\n",
+       "      <td>10</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>71 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Annual_Income  Education_Years  Age\n",
+       "0    60000.000000               17   28\n",
+       "1    70000.000000               20   24\n",
+       "2    80000.000000               18   25\n",
+       "3    50000.000000               17   22\n",
+       "4    75000.000000               17   22\n",
+       "..            ...              ...  ...\n",
+       "66   64312.265115                9   26\n",
+       "67   64137.281279                8   29\n",
+       "68   64726.534621                8   26\n",
+       "69   64255.958301                8   29\n",
+       "70   64428.453222               10   27\n",
+       "\n",
+       "[71 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Read Excel and display the dataframe variable 'dincome'\n",
     "dincome = pd.read_excel('Income_Data.xlsx', sheet_name='Data')\n",
@@ -79,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -136,7 +256,16 @@
     },
     "solution2": "hidden"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2704.61296819 1106.56959996]]\n",
+      "[9915.31744185]\n"
+     ]
+    }
+   ],
    "source": [
     "# Fit the model\n",
     "Regressor.fit(X,Y)   \n",
@@ -165,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -181,7 +310,16 @@
     },
     "solution2": "hidden"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2704.61296819 1106.56959996]]\n",
+      "[9915.31744185]\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the required libraries\n",
     "import numpy as np\n",
@@ -224,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
